--- a/TalentCorp/Views/Candidatos/Index.cshtml
+++ b/TalentCorp/Views/Candidatos/Index.cshtml
@@ -68,7 +68,7 @@
                     Fecha de Solicitud
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Departamento)
+                @Html.DisplayNameFor(model => model.Puesto)
             </th>
             <th></th>
         </tr>
@@ -91,7 +91,7 @@
                 @Html.DisplayFor(modelItem => item.FechaIngreso)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Departamento)
+                @Html.DisplayFor(modelItem => item.Puesto.Nombre)
             </td>
                     <td class="lastCell">
                 <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
