--- a/TalentCorp/Views/Empleados/Create.cshtml
+++ b/TalentCorp/Views/Empleados/Create.cshtml
@@ -37,51 +37,42 @@
 
 <h3 class="logo">Agregar empleado</h3>
 
-<hr />
+<hr/>
 <div class="card">
     <div class="formu">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="formuContent">
                 <label asp-for="Cedula" class="control-label"></label>
-                <input asp-for="Cedula" class="form-control" />
+                <input asp-for="Cedula" class="form-control"/>
                 <span asp-validation-for="Cedula" class="text-danger"></span>
             </div>
             <div class="formuContent">
                 <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
+                <input asp-for="Nombre" class="form-control"/>
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="formuContent">
                 <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control" />
+                <input asp-for="Apellido" class="form-control"/>
                 <span asp-validation-for="Apellido" class="text-danger"></span>
             </div>
             <div class="formuContent">
-                <label asp-for="FechaIngreso" class="control-label"></label>
-                <input asp-for="FechaIngreso" class="form-control" />
+                <label asp-for="FechaIngreso" class="control-label">Fecha de Ingreso</label>
+                <input asp-for="FechaIngreso" class="form-control"/>
                 <span asp-validation-for="FechaIngreso" class="text-danger"></span>
-            </div>
-            <div class="formuContentp">
-                <label asp-for="Departamento" class="control-label"></label>
-                <input asp-for="Departamento" class="form-control" />
-                <span asp-validation-for="Departamento" class="text-danger"></span>
             </div>
             <div class="formuContent">
                 <label asp-for="Estado" class="control-label"></label>
-                <input asp-for="Estado" class="form-control" />
+                <input asp-for="Estado" class="form-control"/>
                 <span asp-validation-for="Estado" class="text-danger"></span>
             </div>
             <div class="formuContent">
-                <label asp-for="PuestoId" class="control-label"></label>
-                <select asp-for="PuestoId" class ="form-control" asp-items="ViewBag.PuestoId"></select>
-            </div>
-            <div class="formuContent">
-                <label asp-for="CandidatoId" class="control-label"></label>
-                <select asp-for="CandidatoId" class ="form-control" asp-items="ViewBag.CandidatoId"></select>
+                <label asp-for="PuestoId" class="control-label">Puesto</label>
+                <select asp-for="PuestoId" class="form-control" asp-items="ViewBag.PuestoId"></select>
             </div>
             <div class="text-align:right">
-                <input type="submit" value="Agregar" class="btn btn-primary" />
+                <input type="submit" value="Agregar" class="btn btn-primary"/>
             </div>
         </form>
     </div>
@@ -90,4 +81,3 @@
 <div>
     <a asp-action="Index"> <- Regresar </a>
 </div>
-
