--- a/TalentCorp/Views/Empleados/Delete.cshtml
+++ b/TalentCorp/Views/Empleados/Delete.cshtml
@@ -37,63 +37,51 @@
 
 <div>
     <h3 class="logo">Eliminar candidato</h3>
-    <hr />
+    <hr/>
     <div class="card">
-    <dl class="row">
+        <dl class="row">
             <dt class="col-sm-5">
-            @Html.DisplayNameFor(model => model.Cedula)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cedula)
-        </dd>
+                @Html.DisplayNameFor(model => model.Cedula)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Cedula)
+            </dd>
             <dt class="col-sm-5">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
+                @Html.DisplayNameFor(model => model.Nombre)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Nombre)
+            </dd>
             <dt class="col-sm-5">
-            @Html.DisplayNameFor(model => model.Apellido)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Apellido)
-        </dd>
+                @Html.DisplayNameFor(model => model.Apellido)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Apellido)
+            </dd>
             <dt class="col-sm-5">
-            @Html.DisplayNameFor(model => model.FechaIngreso)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaIngreso)
-        </dd>
+                Fecha de Ingreso
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.FechaIngreso)
+            </dd>
             <dt class="col-sm-5">
-            @Html.DisplayNameFor(model => model.Departamento)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Departamento)
-        </dd>
+                @Html.DisplayNameFor(model => model.Estado)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Estado)
+            </dd>
             <dt class="col-sm-5">
-            @Html.DisplayNameFor(model => model.Estado)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Estado)
-        </dd>
-            <dt class="col-sm-5">
-            @Html.DisplayNameFor(model => model.Candidato)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Candidato.Id)
-        </dd>
-            <dt class="col-sm-5">
-            @Html.DisplayNameFor(model => model.Puesto)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Puesto.Id)
-        </dd>
-    </dl>
+                @Html.DisplayNameFor(model => model.Puesto)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Puesto!.Nombre)
+            </dd>
+        </dl>
     </div>
-    
+
     <form asp-action="Delete" style="text-align:center">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
+        <input type="hidden" asp-for="Id"/>
+        <input type="submit" value="Eliminar" class="btn btn-danger"/> |
         <a asp-action="Index"><- Regresar</a>
     </form>
 </div>
