--- a/TalentCorp/Views/Empleados/Edit.cshtml
+++ b/TalentCorp/Views/Empleados/Edit.cshtml
@@ -35,55 +35,45 @@
     }
 </style>
 <h3 class="logo">Editar información del empleado</h3>
-<hr />
+<hr/>
 
 <div class="card">
     <div class="formu">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="Id"/>
             <div class="formuContent">
                 <label asp-for="Cedula" class="control-label"></label>
-                <input asp-for="Cedula" class="form-control" />
+                <input asp-for="Cedula" class="form-control"/>
                 <span asp-validation-for="Cedula" class="text-danger"></span>
             </div>
             <div class="formuContent">
                 <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
+                <input asp-for="Nombre" class="form-control"/>
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="formuContent">
                 <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control" />
+                <input asp-for="Apellido" class="form-control"/>
                 <span asp-validation-for="Apellido" class="text-danger"></span>
             </div>
             <div class="formuContent">
-                <label asp-for="FechaIngreso" class="control-label"></label>
-                <input asp-for="FechaIngreso" class="form-control" />
+                <label asp-for="FechaIngreso" class="control-label">Fecha de Ingreso</label>
+                <input asp-for="FechaIngreso" class="form-control"/>
                 <span asp-validation-for="FechaIngreso" class="text-danger"></span>
             </div>
             <div class="formuContent">
-                <label asp-for="Departamento" class="control-label"></label>
-                <input asp-for="Departamento" class="form-control" />
-                <span asp-validation-for="Departamento" class="text-danger"></span>
-            </div>
-            <div class="formuContent">
                 <label asp-for="Estado" class="control-label"></label>
-                <input asp-for="Estado" class="form-control" />
+                <input asp-for="Estado" class="form-control"/>
                 <span asp-validation-for="Estado" class="text-danger"></span>
             </div>
             <div class="formuContent">
-                <label asp-for="PuestoId" class="control-label"></label>
+                <label asp-for="PuestoId" class="control-label">Puesto</label>
                 <select asp-for="PuestoId" class="form-control" asp-items="ViewBag.PuestoId"></select>
                 <span asp-validation-for="PuestoId" class="text-danger"></span>
             </div>
-            <div class="formuContent">
-                <label asp-for="CandidatoId" class="control-label"></label>
-                <select asp-for="CandidatoId" class="form-control" asp-items="ViewBag.CandidatoId"></select>
-                <span asp-validation-for="CandidatoId" class="text-danger"></span>
-            </div>
             <div class="text-align:right">
-                <input type="submit" value="Guardar cambios" class="btn btn-primary" />
+                <input type="submit" value="Guardar cambios" class="btn btn-primary"/>
             </div>
         </form>
     </div>
@@ -92,4 +82,3 @@
 <div>
     <a asp-action="Index"><- Regresar</a>
 </div>
-
