--- a/TalentCorp/Views/Puestos/Index.cshtml
+++ b/TalentCorp/Views/Puestos/Index.cshtml
@@ -4,14 +4,48 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<meta charset="UTF-8">
+<style>
+    .card {
+        padding-left: 2%;
+        padding-right: 2%;
+        padding-top: 2%;
+        padding-bottom: 2%;
+        border-radius: 8px;
+        box-shadow: 0px 0px 5px 5px rgb(0 0 0 / 20%);
+    }
 
-<h1>Index</h1>
+    .rowOne {
+        border-radius: 8px;
+        background-color: rgba(23, 141, 232, 0.3);
+    }
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
+    .firstCell {
+        border-radius: 8px 0 0 8px;
+    }
+
+    .lastCell {
+        border-radius: 0 8px 8px 0;
+    }
+
+    .headRow {
+        margin-bottom: 20%;
+    }
+
+    td {
+        padding-bottom: 5%;
+    }
+
+    tr {
+        border-bottom: 0pt solid white;
+    }
+</style>
+
+<h2 style="text-align:center; margin-top:2%; margin-bottom:2%;">Lista de puestos</h2>
+<br />
+<div class="card">
+    <table class="table">
+        <thead class="headRow">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Nombre)
@@ -36,8 +70,9 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
-            <td>
+                <tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                <tr class="rowOne">
+                    <td class="firstCell">
                 @Html.DisplayFor(modelItem => item.Nombre)
             </td>
             <td>
@@ -55,12 +90,16 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Estado)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <td class="lastCell">
+                        <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id">Ver detalles</a> |
+                        <a asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+</div>
+<p>
+    <a asp-action="Create">Agregar nuevo</a>
+</p>
