--- a/TalentCorp/Views/ExperienciasLaborales/Edit.cshtml
+++ b/TalentCorp/Views/ExperienciasLaborales/Edit.cshtml
@@ -5,46 +5,74 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<style>
 
-<h4>ExperienciaLaboral</h4>
+    .card {
+        width: 40%;
+        border-radius: 8px;
+        margin-left: 30%;
+        margin-right: 30%;
+        box-shadow: 0px 0px 5px 5px rgb(0 0 0 / 20%);
+        text-align: justify;
+    }
+
+    .formu {
+        padding-top: 5%;
+        padding-right: 10%;
+        padding-bottom: 5%;
+        padding-left: 10%;
+    }
+
+    .formuContent {
+        margin-bottom: 5%;
+    }
+
+    .logo {
+        padding-top: 1%;
+        position: relative;
+        font-weight: bold;
+        text-align: center;
+    }
+</style>
+
+<h3 class="logo">Editar experiencia laboral</h3>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="card">
+    <div class="formu">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="CandidatoId" class="control-label">Candidato</label>
                 <select asp-for="CandidatoId" class="form-control" asp-items="ViewBag.CandidatoId"></select>
                 <span asp-validation-for="CandidatoId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="Empresa" class="control-label"></label>
                 <input asp-for="Empresa" class="form-control" />
                 <span asp-validation-for="Empresa" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="PuestoOcupado" class="control-label">Puesto</label>
                 <input asp-for="PuestoOcupado" class="form-control" />
                 <span asp-validation-for="PuestoOcupado" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="FechaDesde" class="control-label">Desde</label>
                 <input asp-for="FechaDesde" class="form-control" />
                 <span asp-validation-for="FechaDesde" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="FechaHasta" class="control-label">Hasta</label>
                 <input asp-for="FechaHasta" class="form-control" />
                 <span asp-validation-for="FechaHasta" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="Salario" class="control-label"></label>
                 <input asp-for="Salario" class="form-control" />
                 <span asp-validation-for="Salario" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="text-align:right">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -52,6 +80,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index"><- Regresar</a>
 </div>
 
