--- a/TalentCorp/Views/Puestos/Create.cshtml
+++ b/TalentCorp/Views/Puestos/Create.cshtml
@@ -5,45 +5,75 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<style>
 
-<h4>Puesto</h4>
+    .card {
+        width: 40%;
+        border-radius: 8px;
+        margin-left: 30%;
+        margin-right: 30%;
+        box-shadow: 0px 0px 5px 5px rgb(0 0 0 / 20%);
+        text-align: justify;
+    }
+
+    .formu {
+        padding-top: 5%;
+        padding-right: 10%;
+        padding-bottom: 5%;
+        padding-left: 10%;
+    }
+
+    .formuContent {
+        margin-bottom: 5%;
+    }
+
+    .logo {
+        padding-top: 1%;
+        position: relative;
+        font-weight: bold;
+        text-align: center;
+    }
+</style>
+
+<h3 class="logo">Agregar Candidato</h3>
+
 <hr />
-<div class="row">
-    <div class="col-md-4">
+
+<div class="card">
+    <div class="formu">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="Descripcion" class="control-label"></label>
                 <input asp-for="Descripcion" class="form-control" />
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="NivelRiesgo" class="control-label">Nivel de Riesgo</label>
                 <input asp-for="NivelRiesgo" class="form-control" />
                 <span asp-validation-for="NivelRiesgo" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="SalarioMin" class="control-label">Salario Minimo</label>
                 <input asp-for="SalarioMin" class="form-control" />
                 <span asp-validation-for="SalarioMin" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="SalarioMax" class="control-label">Salario Maximo</label>
                 <input asp-for="SalarioMax" class="form-control" />
                 <span asp-validation-for="SalarioMax" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="formuContent">
                 <label asp-for="Estado" class="control-label"></label>
                 <input asp-for="Estado" class="form-control" />
                 <span asp-validation-for="Estado" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="text-align:right">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
@@ -51,6 +81,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index"> <- Regresar </a>
 </div>
 
