--- a/TalentCorp/Views/Candidatos/Index.cshtml
+++ b/TalentCorp/Views/Candidatos/Index.cshtml
@@ -109,6 +109,10 @@
 <p>
     <a asp-action="Create">Agregar nuevo</a>
 </p>
+
+<p>
+    <a asp-action="Export" class="btn btn-primary">Descargar Excel</a>
+</p>
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         // Obtener la lista de puestos desde ViewData
